@@ -1,6 +1,10 @@
 CHANGES IN FLTK 1.1.0
 
 	- Documentation updates.
+	- Fixed filename problems with Fl_File_Chooser -
+	  changing the filename field directly or choosing files
+	  from the root directory could yield interesting
+	  filenames.
 	- Fl_Input_ could crash if it received an empty paste
 	  event.
 	- The mouse pointer now changes to the I beam
